# codeRouter

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.sh  index.html  package-lock.json  package.json  release.sh  tailwind.config.js  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
ai-prompts/implementation/: 057-openrouter-string-pricing-fix.md  059-release-v0.1.7.md  060-opencode-agent-load-on-mount.md  061-release-v0.1.8.md
docs/: lessons.md  memories.md  plan.md
docs/audit/: audit-001-initial-audit.md  audit-002-post-fix-audit.md  audit-003-third-audit.md  audit-004-fourth-audit.md  audit-005-fifth-audit.md  audit-006-sixth-audit.md  audit-007-fix-verification.md
sidecar/: Cargo.toml
sidecar/src/: lib.rs  main.rs
sidecar/src/config/: mod.rs  models.rs  store.rs
sidecar/src/credentials/: keychain.rs  mod.rs
sidecar/src/metrics/: db.rs  mod.rs  queries.rs  recorder.rs  scheduler.rs
sidecar/src/models/: mod.rs  refresher.rs
sidecar/src/opencode/: config_writer.rs  custom_agents.rs  mod.rs
sidecar/src/proxy/: codex.rs  mod.rs  router.rs  server.rs  ssrf.rs  translator.rs  upstream.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  update.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/components/: ActionButton.tsx  AppShell.tsx  CustomAgentsManager.tsx  ErrorBoundary.tsx  Onboarding.tsx  StatusBadge.tsx  Toast.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  progress.tsx  select.tsx  table.tsx  tabs.tsx
src/hooks/: useGroupStatusPoll.ts  useGroupStatusPoll.tsx  useMetricsStream.ts  useProxyStatusPoll.ts
src/lib/: ipc.ts  provider-presets.ts  utils.ts
src/pages/: Dashboard.tsx  ModelGroups.tsx  OpenCodeSetup.tsx  Providers.tsx  Settings.tsx  UsageMetrics.tsx
src/store/: index.test.ts  index.ts
src/test/: setup.ts
src/types/: index.test.ts  index.ts
tui/: Cargo.toml
tui/src/: app.rs  main.rs  presets.rs
tui/src/pages/: dashboard.rs  groups.rs  mod.rs  opencode.rs  providers.rs  settings.rs  usage.rs
tui/src/widgets/: help_overlay.rs  mod.rs  status_bar.rs  tab_bar.rs  toast.rs
