[package]
name = "coderouter-proxy"
version = "0.1.6"
edition = "2021"

[[bin]]
name = "coderouter-proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
bytes = "1"
fastrand = "2"
futures = "0.3"
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }
fs2 = "0.4"
dirs = "5"
chrono = { workspace = true }
url = "2"
uuid = { version = "1", features = ["v4"] }
async-stream = "0.3"

[lib]
name = "coderouter_proxy"
path = "src/lib.rs"
