[package]
name = "coderouter"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
coderouter-proxy = { path = "../sidecar" }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
png = "0.17"

[build-dependencies]
tauri-build = { version = "2", features = [] }
