[package]
name = "coderouter"
version = "0.1.33"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
coderouter-proxy = { path = "../sidecar" }
tokio = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
png = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
